noinst_LTLIBRARIES         	= libbayesreg.la

libbayesreg_la_SOURCES		= Regression.cc \
				  LinearRegression.cc \
				  LogisticRegression.cc \
				  CoxRegression.cc

noinst_HEADERS			= Regression.h \
				  LinearRegression.h \
				  LogisticRegression.h \
				  CoxRegression.h

INCLUDES			= -I$(top_srcdir)/src/bayeslib
# libbayesreg_la_LDFLAGS		= -version-info 0:0:0
