noinst_LTLIBRARIES         	= libutils.la
libutils_la_SOURCES		= functions.cc \
				  DataReader.cc \
				  DataMatrix.cc \
				  StringSplitter.cc \
				  StringConvertor.cc \
				  LogWriter.cc

noinst_HEADERS			= DataMatrix.h \
				  DataReader.h \
				  dist.h \
				  linalg.h \
				  LogWriter.h \
				  misc.h \
				  StringConvertor.h \
				  StringSplitter.h

libutils_la_LDFLAGS		= -version-info 0:0:0
INCLUDES			= -I ..
