check_LTLIBRARIES		= libmock.la

libmock_la_SOURCES		= MockOptions.h \
				  MockOptions.cc \
				  MockInputData.cc \
				  MockInputData.h \
				  MockHapMixFreqs.h \
				  MockHapMixFreqs.cc \
				  MockGenome.h \
				  MockGenome.cc \
				  MockFreqArray.h \
				  MockFreqArray.cc \
				  MockCompositeLocus.h \
				  MockCompositeLocus.cc \
				  MockChromosome.cc \
				  MockChromosome.h \
				  operators.h

INCLUDES			= -I$(top_srcdir)/src/bayeslib
